# matsuzawa-20260121

./: pyproject.toml
.github/workflows/: dev_compile_latex_with_open_code.yml  dev_run_evaluation_with_open_code.yml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-resnet18-cifar10.yaml  proposed-resnet18-cifar10.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
